objects/revcult__Triggered_Alert__c.object
<CustomObject>
    <fields>
        <fullName>revcult__Alert_Trigger_Operator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alert Trigger Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revcult__Alert_Trigger_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alert Trigger Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revcult__Alert_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alert Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revcult__Job_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Job Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revcult__Message_Body__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Message Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>revcult__RevCult_Alert_Config__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OwnBackup_Alert_Config</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revcult__RevCult_Alert_Subscriber__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>OwnBackup Alert Subscriber</label>
        <referenceTo>revcult__Alert_Subscriber__c</referenceTo>
        <relationshipLabel>OwnBackup Triggered Alerts</relationshipLabel>
        <relationshipName>RevCult_Triggered_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>revcult__RevCult_Alert__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>OwnBackup Alert</label>
        <referenceTo>revcult__Alert__c</referenceTo>
        <relationshipLabel>OwnBackup Triggered Alerts</relationshipLabel>
        <relationshipName>RevCult_Triggered_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>revcult__Subscriber_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subscriber Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OwnBackup Triggered Alert</label>
    <listViews>
        <fullName>revcult__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TAlert-{00000000}</displayFormat>
        <label>OwnBackup Triggered Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OwnBackup Triggered Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>